# robintrace

./: .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE  Mat3_8h.html  Mat3_8h__dep__incl.map  Mat3_8h__dep__incl.md5  Mat3_8h__incl.map  Mat3_8h__incl.md5  Mat3_8h_source.html  README.md  Vec2_8h.html  Vec2_8h__dep__incl.map  Vec2_8h__dep__incl.md5  Vec2_8h__incl.map  Vec2_8h__incl.md5  Vec2_8h_source.html  Vec3_8h.html  Vec3_8h__dep__incl.map  Vec3_8h__dep__incl.md5  Vec3_8h__incl.map  Vec3_8h__incl.md5  Vec3_8h_source.html  _formulas.tex  annotated.html  bun_8h.html  bun_8h__dep__incl.map  bun_8h__dep__incl.md5  bun_8h__incl.map  bun_8h__incl.md5  bun_8h_source.html  classbun-members.html  classbun.html  classbun__coll__graph.map  classbun__coll__graph.md5  classes.html  classlpart-members.html  classlpart.html  (+372 more)
.github/workflows/: doxygen-gh-pages.yml
benchmark/: benchmark.cpp  benchmark.h  robintrace_benchmark.cpp  robintrace_benchmark.h
benchmark/pewit/: pewit_benchmark.cpp  pewit_benchmark.h
benchmark/pinyo/: pinyo_benchmark.cpp  pinyo_benchmark.h
benchmark/poaky/: poaky_benchmark.cpp  poaky_benchmark.h
doc/: biblio.bib  main.tex  preamble.tex
doc/glossary/: glossary.tex
doc/images/arch/overview/: overview.dot
doc/sections/: architecture.tex  content.tex  definitions.tex  functional.tex  introduction.tex  justification.tex  notations.tex  scope.tex  tests.tex
include/: robintrace.h
latex-poaky/: .gitignore  README.md  latexmkrc  preamble.tex
latex-poaky/glossary/: glossary.tex
latex-poaky/images/: .gitignore
latex-poaky/sections/: definitions.tex  functional.tex  introduction.tex  justification.tex
notebooks/: quadrics-cases.ipynb  standard-shape.ipynb
pinyo/: CMakeLists.txt  README.md
pinyo/benchmark/: benchmark.cpp  benchmark.h
pinyo/src/: pinyo.h
pinyo/src/bun/: bun.cpp
pinyo/src/lpart/: transfer_part.cpp
poaky/: CMakeLists.txt
poaky/benchmark/: benchmark.h
poaky/benchmark/utils/: bench_utils.cpp  bench_utils.h
poaky/src/: poaky.h
poaky/src/base/: Mat3.h
poaky/src/ray/: ray.h
poaky/src/shape/: plane.cpp  standard.cpp
poaky/src/transfer/: transfer.cpp
poaky/test/: printers.h  test_main.cpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+23 more)
src/: main-page.dox  main.cpp  poaky.h
src/base/: Point3.cpp  Point3.h  UVec3.cpp  UVec3.h  Vec3.cpp  Vec3.h
src/pewit/: CMakeLists.txt
src/pewit/src/: lpart_vec.h  lseq.cpp  lseq.h  lseq_part.cpp  lseq_part.h  new_lseq.cpp  new_lseq.h  pewit.h  ray_pack.cpp  ray_pack.h
src/pewit/src/lseq/: lseq.cpp  lseq.h
src/pewit/src/lseq_input/: lseq_input.h  lseq_rays.cpp  lseq_rays.h
src/pewit/src/lseq_part_result/: lseq_part_global_position.cpp  lseq_part_global_position.h  lseq_part_global_rays.cpp  lseq_part_global_rays.h  lseq_part_propagation_direction.cpp  lseq_part_propagation_direction.h  lseq_part_rays.cpp  lseq_part_rays.h  lseq_part_result.h  lseq_part_semi_diameter.cpp  lseq_part_semi_diameter.h
src/pewit/src/type_map/: type_map.h
src/pinyo/: CMakeLists.txt
src/pinyo/src/: pinyo.h
src/pinyo/src/bun/: bun.cpp  bun.h
src/pinyo/src/lpart/: lpart.h  shape_part.h  transfer_part.cpp  transfer_part.h
src/poaky/: CMakeLists.txt
src/poaky/src/: poaky.h
src/poaky/src/base/: Mat3.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
src/poaky/src/ray/: ray.cpp  ray.h
src/poaky/src/rop/: rop.cpp  rop.h
src/poaky/src/shape/: plane.cpp  plane.h  shape.h  standard.cpp  standard.h
src/poaky/src/transfer/: transfer.cpp  transfer.h
src/ray/: ray.cpp  ray.h  ray_eig.cpp  ray_eig.h
src/rop/: rop.cpp  rop.h
src/shape/: plane.cpp  plane.h  shape.h  sphere.cpp  sphere.h  standard.cpp  standard.h
src/transfer/: transfer.cpp  transfer.h
test/: instantiators.h  printers.h  sphere_intersect_valid.cpp  sphere_intersect_valid.h  test_main.cpp  test_main.h
test/cgal/: cgal_reflect.cpp  cgal_reflect.h  cgal_sphere_normal.cpp  cgal_sphere_normal.h  cgal_types.h  sphere_intersect_valid.cpp  sphere_intersect_valid.h
test/cgal_sphere_intersect/: sphere_intersect_valid.cpp  sphere_intersect_valid.h
test/pewit/: pewit_test.cpp  pewit_test.h
test/pinyo/: pinyo_instantiators.h  pinyo_printers.h  pinyo_test.cpp  pinyo_test.h
test/poaky/: poaky_instantiators.h  poaky_printers.h  poaky_test.cpp  poaky_test.h
test/poaky/rop/: reflect_ref.h  refract_ref.cpp
test/poaky/transfer/: transfer_ref.h
test/rop/: reflect_ref.cpp  reflect_ref.h  refract_ref.cpp  refract_ref.h
test/shape/: sphere_ref.cpp  sphere_ref.h
test/transfer/: transfer_ref.cpp
test/utils/: ray_eq.cpp  ray_eq.h
